TODO & venv/ addition

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,16 @@
 .env.dev
 .env
 
+# development productivity files 
+TODO.md
+
 # auto-gen files
 __pycache__/
 
 # dev install auto-gen files (with the 'pip3 install -e .' command)
 *.egg-info/
 
+
+# build or python virtual env files
+/venv
 /build
