--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,6 @@
-# Core dependencies
-certifi==2023.11.17
-charset-normalizer==3.3.2
 click==8.1.7
-idna==3.6
-importlib-metadata==7.0.1
-jaraco.classes==3.3.0
-Jinja2==3.1.3
 keyring==24.3.0
-MarkupSafe==2.1.4
-more-itertools==10.2.0
-numpy==1.26.3
-
-# Data manipulation
-pandas==2.2.0
-pyarrow==15.0.0
-python-dateutil==2.8.2
-
-# Development tools
-python-dotenv==1.0.1
-pytz==2023.3.post1
-
-# Networking
-requests==2.31.0
-urllib3==2.1.0
-
-# Miscellaneous
-six==1.16.0
-tzdata==2023.4
-zipp==3.17.0
+PyYAML==6.0.1
+questionary==2.0.1
+Requests==2.31.0
+setuptools==68.2.2
