gitignore / envexample modifications

--- a/.env.example
+++ b/.env.example
@@ -10,12 +10,12 @@ ARIA_FACILITY_ID=
 ARIA_ENTITY_VISIT_URL=visit/feed
 ARIA_ENTITY_PROPOSAL_DATA_URL=proposal_data/find
 ARIA_ENTITY_PULL_PROPOSAL_URL=proposal/
-ARIA_ENTITY_URL=https://beta.structuralbiology.eu/api/graphql/access/v1
+ARIA_ENTITY_URL=https://beta.structuralbiology.eu/api/graphql/access/v1/visit
 ARIA_CONNECTION_USERNAME=
 ARIA_CONNECTION_PASSWORD=
-ARIA_CONNECTION_GRANT_TYPE=password
-ARIA_CONNECTION_SCOPE=account
-ARIA_CLIENT_ID=postman
+ARIA_CONNECTION_GRANT_TYPE=
+ARIA_CONNECTION_SCOPE=
+ARIA_CLIENT_ID=
 ARIA_CLIENT_SECRET=
 ARIA_KEYRING=aria_key
-ARIA_CONNECTION_REFRESH_GRANT=refresh_token
+ARIA_CONNECTION_REFRESH_GRANT=
