--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,9 @@
-ARIA_CONNECTION_LOGIN_URL=https://auth.aria.services/auth/realms/ARIA/protocol/openid-connect/token
-ARIA_ENDPOINTS_PULL_BUCKETS=bucket
-ARIA_ENDPOINTS_PULL_RECORDS=record
-ARIA_ENDPOINTS_PULL_FIELDS=field
-ARIA_ENDPOINTS_CREATE_BUCKET=createDataBucket
-ARIA_ENDPOINTS_CREATE_RECORD=createDataRecord
-ARIA_ENDPOINTS_CREATE_FIELD=createDataField
-ARIA_DATA_DEPOSITION_URL=https://datadeposition.beta.api.aria.services/api/v1
+ARIA_CONNECTION_LOGIN_URL_LOCAL=
+ARIA_CONNECTION_LOGIN_URL=
+ARIA_GQL_BETA=
+ARIA_GQL_LOCAL=
+ARIA_GQL_LIVE= 
 ARIA_FACILITY_ID=
-ARIA_ENTITY_VISIT_URL=visit/feed
-ARIA_ENTITY_PROPOSAL_DATA_URL=proposal_data/find
-ARIA_ENTITY_PULL_PROPOSAL_URL=proposal/
-ARIA_ENTITY_URL=https://beta.structuralbiology.eu/api/graphql/access/v1/visit
 ARIA_CONNECTION_USERNAME=
 ARIA_CONNECTION_PASSWORD=
 ARIA_CONNECTION_GRANT_TYPE=
@@ -19,3 +12,4 @@ ARIA_CLIENT_ID=
 ARIA_CLIENT_SECRET=
 ARIA_KEYRING=aria_key
 ARIA_CONNECTION_REFRESH_GRANT=
+DEV=
