--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 click==8.1.7
+requests==2.31.0
 keyring==24.3.0
-PyYAML==6.0.1
+python-dotenv==1.0.0
 questionary==2.0.1
-Requests==2.31.0
+PyYAML==6.0.1
+cryptography==42.0.2
 setuptools==68.2.2
