--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ ARIA_CONNECTION_LOGIN_URL_LOCAL=
 ARIA_CONNECTION_LOGIN_URL=
 ARIA_GQL_BETA=
 ARIA_GQL_LOCAL=
-ARIA_GQL_LIVE= 
+ARIA_GQL_LIVE=
 ARIA_FACILITY_ID=
 ARIA_CONNECTION_USERNAME=
 ARIA_CONNECTION_PASSWORD=
@@ -13,3 +13,10 @@ ARIA_CLIENT_SECRET=
 ARIA_KEYRING=aria_key
 ARIA_CONNECTION_REFRESH_GRANT=
 DEV=
+
+# enable tests
+ARIA_RUN_TESTS=
+TEST_PROVIDER_CLIENT=
+TEST_DATA_SPACE_IDENTIFIER=
+TEST_PROVIDER_TOKEN=
+TEST_PROVIDER_HOST_ENDPOINT=
