Test finding the space ID

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,4 @@ TEST_PROVIDER_CLIENT=
 TEST_PROVIDER_TOKEN=
 TEST_PROVIDER_HOST_ENDPOINT=
 TEST_DATA_SPACE_IDENTIFIER_NAME=
+TEST_PROVIDER_DATA_SPACE_ID=
