Separate provisioning tests from file mgmt tests

--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,5 @@ TEST_PROVIDER_ID=
 TEST_PROVIDER_CLIENT=
 TEST_PROVIDER_ARIA_ENGINE=
 TEST_PROVIDER_FILE_ID_NAME=
+TEST_PROVIDER_FILE_ID=
 TEST_VISIT_ID=
