--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ keyring==24.3.0
 python-dotenv==1.0.0
 questionary==2.0.1
 PyYAML==6.0.1
-cryptography==44.0.1
+cryptography=44.0.1 
 setuptools==78.1.1
